--- a/404.md
+++ b/404.md
@@ -1,8 +1,8 @@
 ---
 layout: pageNotFound
 preTitle: Error 404
-title: Page not found
-description: We cannot find the page you are looking for
+title: Página no encontrada 
+description: La página que estabas buscando no se está acá
 permalink: /404
 cta:
 - text: Home
